Bug 1388478 - Use job-defaults to simplify 'test' configs where appropriate, r=jmaher
This is mostly a refactor, moving shared defaults to the top of the file where
appropriate.

The only change this makes, is modifying a couple of the macosx talos tasks to
use the osx mozharness config. They were previously using the linux config
which was likely a bug.

MozReview-Commit-ID: 2c0muPZrHZ

UltraBlame original commit: 0316704b960c8cb071058dbe8ecc6b0322c9f994

--- a/taskcluster/ci/test/compiled.yml
+++ b/taskcluster/ci/test/compiled.yml
@@ -1,3 +1,10 @@
+job
+-
+defaults
+:
+e10s
+:
+false
 cppunit
 :
 description
@@ -10,9 +17,6 @@ Tests
 suite
 :
 cppunittest
-e10s
-:
-false
 treeherder
 -
 symbol
@@ -220,9 +224,6 @@ run
 suite
 :
 gtest
-e10s
-:
-false
 treeherder
 -
 symbol
@@ -442,9 +443,6 @@ jittest
 jittest
 -
 chunked
-e10s
-:
-false
 treeherder
 -
 symbol
