--- a/taskcluster/ci/test/firefox-ui.yml
+++ b/taskcluster/ci/test/firefox-ui.yml
@@ -1,46 +1,7 @@
-firefox
+job
 -
-ui
--
-functional
--
-local
+defaults
 :
-description
-:
-"
-Firefox
--
-ui
--
-tests
-functional
-run
-"
-suite
-:
-"
-firefox
--
-ui
-/
-functional
-local
-"
-treeherder
--
-symbol
-:
-tc
--
-Fxfn
--
-l
-(
-en
--
-US
-)
 max
 -
 run
@@ -105,6 +66,51 @@ py
 remove_executables
 .
 py
+firefox
+-
+ui
+-
+functional
+-
+local
+:
+description
+:
+"
+Firefox
+-
+ui
+-
+tests
+functional
+run
+"
+suite
+:
+"
+firefox
+-
+ui
+/
+functional
+local
+"
+treeherder
+-
+symbol
+:
+tc
+-
+Fxfn
+-
+l
+(
+en
+-
+US
+)
+mozharness
+:
 extra
 -
 options
@@ -182,70 +188,8 @@ en
 -
 US
 )
-max
--
-run
--
-time
-:
-5400
 mozharness
 :
-script
-:
-firefox_ui_tests
-/
-functional
-.
-py
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-firefox_ui_tests
-/
-taskcluster_windows
-.
-py
-macosx
-.
-*
-:
--
-firefox_ui_tests
-/
-taskcluster
-.
-py
--
-firefox_ui_tests
-/
-taskcluster_mac
-.
-py
-linux
-.
-*
-:
--
-firefox_ui_tests
-/
-taskcluster
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
