--- a/taskcluster/ci/test/talos.yml
+++ b/taskcluster/ci/test/talos.yml
@@ -1,3 +1,72 @@
+job
+-
+defaults
+:
+max
+-
+run
+-
+time
+:
+3600
+suite
+:
+talos
+virtualization
+:
+hardware
+mozharness
+:
+script
+:
+talos_script
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+macosx
+.
+*
+:
+-
+talos
+/
+mac_config
+.
+py
+windows
+.
+*
+:
+-
+talos
+/
+windows_config
+.
+py
+default
+:
+-
+talos
+/
+linux_config
+.
+py
 talos
 -
 chrome
@@ -8,9 +77,6 @@ description
 Talos
 chrome
 "
-suite
-:
-talos
 try
 -
 name
@@ -26,9 +92,6 @@ T
 (
 c
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -83,65 +146,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -179,9 +185,6 @@ Stylo
 disabled
 chrome
 "
-suite
-:
-talos
 try
 -
 name
@@ -201,9 +204,6 @@ Tsd
 (
 c
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -225,65 +225,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -319,9 +262,6 @@ description
 Talos
 dromaeojs
 "
-suite
-:
-talos
 try
 -
 name
@@ -337,9 +277,6 @@ T
 (
 d
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -394,65 +331,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -490,9 +370,6 @@ Stylo
 disabled
 dromaeojs
 "
-suite
-:
-talos
 try
 -
 name
@@ -512,9 +389,6 @@ Tsd
 (
 d
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -536,65 +410,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -630,9 +447,6 @@ description
 Talos
 g1
 "
-suite
-:
-talos
 try
 -
 name
@@ -648,9 +462,6 @@ T
 (
 g1
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -714,56 +525,6 @@ time
 7200
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -801,9 +562,6 @@ Stylo
 disabled
 g1
 "
-suite
-:
-talos
 try
 -
 name
@@ -823,9 +581,6 @@ Tsd
 (
 g1
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -856,56 +611,6 @@ time
 7200
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -941,9 +646,6 @@ description
 Talos
 g2
 "
-suite
-:
-talos
 try
 -
 name
@@ -959,9 +661,6 @@ T
 (
 g2
 )
-virtualization
-:
-hardware
 max
 -
 run
@@ -1025,56 +724,6 @@ try
 ]
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -1112,9 +761,6 @@ Stylo
 disabled
 g2
 "
-suite
-:
-talos
 try
 -
 name
@@ -1134,9 +780,6 @@ Tsd
 (
 g2
 )
-virtualization
-:
-hardware
 max
 -
 run
@@ -1167,56 +810,6 @@ try
 ]
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -1252,9 +845,6 @@ description
 Talos
 g3
 "
-suite
-:
-talos
 try
 -
 name
@@ -1270,9 +860,6 @@ T
 (
 g3
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -1327,65 +914,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -1423,9 +953,6 @@ Stylo
 disabled
 g3
 "
-suite
-:
-talos
 try
 -
 name
@@ -1445,9 +972,6 @@ Tsd
 (
 g3
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -1469,65 +993,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -1563,9 +1030,6 @@ description
 Talos
 g4
 "
-suite
-:
-talos
 try
 -
 name
@@ -1581,9 +1045,6 @@ T
 (
 g4
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -1638,65 +1099,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -1734,9 +1138,6 @@ Stylo
 disabled
 g4
 "
-suite
-:
-talos
 try
 -
 name
@@ -1756,9 +1157,6 @@ Tsd
 (
 g4
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -1780,65 +1178,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -1874,9 +1215,6 @@ description
 Talos
 g5
 "
-suite
-:
-talos
 try
 -
 name
@@ -1892,9 +1230,6 @@ T
 (
 g5
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -1949,29 +1284,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 config
 :
 by
@@ -1980,34 +1294,8 @@ test
 -
 platform
 :
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
 default
 :
--
-talos
-/
-linux_config
-.
-py
 -
 remove_executables
 .
@@ -2049,9 +1337,6 @@ Stylo
 disabled
 g5
 "
-suite
-:
-talos
 try
 -
 name
@@ -2071,9 +1356,6 @@ Tsd
 (
 g5
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -2095,29 +1377,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 config
 :
 by
@@ -2126,34 +1387,8 @@ test
 -
 platform
 :
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
 default
 :
--
-talos
-/
-linux_config
-.
-py
 -
 remove_executables
 .
@@ -2193,9 +1428,6 @@ description
 Talos
 h1
 "
-suite
-:
-talos
 try
 -
 name
@@ -2211,9 +1443,6 @@ T
 (
 h1
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -2268,65 +1497,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -2358,9 +1530,6 @@ description
 Talos
 h2
 "
-suite
-:
-talos
 try
 -
 name
@@ -2376,9 +1545,6 @@ T
 (
 h2
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -2433,65 +1599,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -2523,9 +1632,6 @@ description
 Talos
 other
 "
-suite
-:
-talos
 try
 -
 name
@@ -2541,9 +1647,6 @@ T
 (
 o
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -2598,65 +1701,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -2694,9 +1740,6 @@ Stylo
 disabled
 other
 "
-suite
-:
-talos
 try
 -
 name
@@ -2716,9 +1759,6 @@ Tsd
 (
 o
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -2740,65 +1780,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -2838,9 +1821,6 @@ perf
 -
 reftest
 "
-suite
-:
-talos
 try
 -
 name
@@ -2858,9 +1838,6 @@ T
 (
 p
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -2910,55 +1887,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -2988,9 +1918,6 @@ perf
 reftest
 singletons
 "
-suite
-:
-talos
 try
 -
 name
@@ -3010,9 +1937,6 @@ T
 (
 ps
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3062,65 +1986,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -3158,9 +2025,6 @@ perf
 reftest
 singletons
 "
-suite
-:
-talos
 try
 -
 name
@@ -3184,9 +2048,6 @@ Tsd
 (
 ps
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3203,65 +2064,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -3300,9 +2104,6 @@ perf
 -
 reftest
 "
-suite
-:
-talos
 try
 -
 name
@@ -3324,9 +2125,6 @@ Tsd
 (
 p
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3343,55 +2141,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -3418,9 +2169,6 @@ description
 Talos
 speedometer
 "
-suite
-:
-talos
 try
 -
 name
@@ -3436,9 +2184,6 @@ T
 (
 sp
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3493,65 +2238,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -3589,9 +2277,6 @@ Stylo
 disabled
 speedometer
 "
-suite
-:
-talos
 try
 -
 name
@@ -3611,9 +2296,6 @@ Tsd
 (
 sp
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3635,65 +2317,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -3729,9 +2354,6 @@ description
 Talos
 svgr
 "
-suite
-:
-talos
 try
 -
 name
@@ -3747,9 +2369,6 @@ T
 (
 s
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3804,65 +2423,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -3900,9 +2462,6 @@ Stylo
 disabled
 svgr
 "
-suite
-:
-talos
 try
 -
 name
@@ -3922,9 +2481,6 @@ Tsd
 (
 s
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -3946,65 +2502,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -4040,9 +2539,6 @@ description
 Talos
 tp5o
 "
-suite
-:
-talos
 try
 -
 name
@@ -4058,9 +2554,6 @@ T
 (
 tp
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -4115,65 +2608,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -4211,9 +2647,6 @@ Stylo
 disabled
 tp5o
 "
-suite
-:
-talos
 try
 -
 name
@@ -4233,9 +2666,6 @@ Tsd
 (
 tp
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -4257,65 +2687,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -4351,9 +2724,6 @@ description
 Talos
 Tp6
 "
-suite
-:
-talos
 try
 -
 name
@@ -4450,65 +2820,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -4546,9 +2859,6 @@ Stylo
 disabled
 Tp6
 "
-suite
-:
-talos
 try
 -
 name
@@ -4568,9 +2878,6 @@ Tsd
 (
 tp6
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -4638,65 +2945,8 @@ central
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -4727,9 +2977,6 @@ Stylo
 sequential
 Tp6
 "
-suite
-:
-talos
 try
 -
 name
@@ -4749,9 +2996,6 @@ Tss
 (
 tp6
 )
-virtualization
-:
-hardware
 run
 -
 on
@@ -4833,65 +3077,8 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -4916,9 +3103,6 @@ description
 Talos
 xperf
 "
-suite
-:
-talos
 try
 -
 name
@@ -4979,65 +3163,8 @@ default
 :
 [
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -5075,9 +3202,6 @@ Stylo
 disabled
 xperf
 "
-suite
-:
-talos
 try
 -
 name
@@ -5134,65 +3258,8 @@ default
 :
 [
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
 extra
 -
 options
