--- a/taskcluster/ci/test/web-platform.yml
+++ b/taskcluster/ci/test/web-platform.yml
@@ -1,3 +1,75 @@
+job
+-
+defaults
+:
+instance
+-
+size
+:
+xlarge
+max
+-
+run
+-
+time
+:
+5400
+mozharness
+:
+script
+:
+web_platform_tests
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+web_platform_tests
+/
+prod_config_windows_taskcluster
+.
+py
+macosx
+.
+*
+:
+-
+web_platform_tests
+/
+prod_config
+.
+py
+default
+:
+-
+web_platform_tests
+/
+prod_config
+.
+py
+-
+remove_executables
+.
+py
 web
 -
 platform
@@ -57,11 +129,6 @@ run
 time
 :
 7200
-instance
--
-size
-:
-xlarge
 e10s
 :
 by
@@ -82,63 +149,9 @@ default
 true
 mozharness
 :
-script
-:
-web_platform_tests
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-web_platform_tests
-/
-prod_config_windows_taskcluster
-.
-py
-macosx
-.
-*
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
-default
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
@@ -229,11 +242,6 @@ run
 time
 :
 7200
-instance
--
-size
-:
-xlarge
 run
 -
 on
@@ -249,63 +257,9 @@ releng
 approval
 mozharness
 :
-script
-:
-web_platform_tests
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-web_platform_tests
-/
-prod_config_windows_taskcluster
-.
-py
-macosx
-.
-*
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
-default
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
@@ -397,18 +351,6 @@ W
 (
 Wr
 )
-max
--
-run
--
-time
-:
-5400
-instance
--
-size
-:
-xlarge
 chunks
 :
 by
@@ -450,60 +392,6 @@ default
 true
 mozharness
 :
-script
-:
-web_platform_tests
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-web_platform_tests
-/
-prod_config_windows_taskcluster
-.
-py
-macosx
-.
-*
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
-default
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
@@ -554,18 +442,6 @@ W
 (
 WrH
 )
-max
--
-run
--
-time
-:
-5400
-instance
--
-size
-:
-xlarge
 chunks
 :
 by
@@ -620,60 +496,6 @@ releng
 approval
 mozharness
 :
-script
-:
-web_platform_tests
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-web_platform_tests
-/
-prod_config_windows_taskcluster
-.
-py
-macosx
-.
-*
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
-default
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
@@ -763,74 +585,8 @@ W
 (
 Wd
 )
-max
--
-run
--
-time
-:
-5400
-instance
--
-size
-:
-xlarge
 mozharness
 :
-script
-:
-web_platform_tests
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-web_platform_tests
-/
-prod_config_windows_taskcluster
-.
-py
-macosx
-.
-*
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
-default
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
@@ -883,18 +639,6 @@ W
 (
 WdH
 )
-max
--
-run
--
-time
-:
-5400
-instance
--
-size
-:
-xlarge
 run
 -
 on
@@ -910,60 +654,6 @@ releng
 approval
 mozharness
 :
-script
-:
-web_platform_tests
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-web_platform_tests
-/
-prod_config_windows_taskcluster
-.
-py
-macosx
-.
-*
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
-default
-:
--
-web_platform_tests
-/
-prod_config
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
