--- a/taskcluster/ci/test/awsy.yml
+++ b/taskcluster/ci/test/awsy.yml
@@ -1,26 +1,10 @@
-awsy
+job
+-
+defaults
 :
-description
-:
-"
-Are
-we
-slim
-yet
-"
 suite
 :
 awsy
-treeherder
--
-symbol
-:
-tc
--
-SY
-(
-sy
-)
 max
 -
 run
@@ -42,40 +26,6 @@ gl
 layers
 :
 false
-run
--
-on
--
-projects
-:
-by
--
-test
--
-platform
-:
-.
-*
--
-devedition
-/
-.
-*
-:
-[
-]
-#
-don
-'
-t
-run
-on
-devedition
-default
-:
-built
--
-projects
 mozharness
 :
 script
@@ -123,6 +73,60 @@ awsy
 linux_config
 .
 py
+awsy
+:
+description
+:
+"
+Are
+we
+slim
+yet
+"
+treeherder
+-
+symbol
+:
+tc
+-
+SY
+(
+sy
+)
+run
+-
+on
+-
+projects
+:
+by
+-
+test
+-
+platform
+:
+.
+*
+-
+devedition
+/
+.
+*
+:
+[
+]
+#
+don
+'
+t
+run
+on
+devedition
+default
+:
+built
+-
+projects
 awsy
 -
 stylo
@@ -140,9 +144,6 @@ for
 Stylo
 disabled
 "
-suite
-:
-awsy
 treeherder
 -
 symbol
@@ -153,27 +154,6 @@ SYsd
 (
 sy
 )
-max
--
-run
--
-time
-:
-7200
-instance
--
-size
-:
-xlarge
-allow
--
-software
--
-gl
--
-layers
-:
-false
 run
 -
 on
@@ -210,49 +190,6 @@ built
 projects
 mozharness
 :
-script
-:
-awsy_script
-.
-py
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-awsy
-/
-taskcluster_windows_config
-.
-py
-macosx
-.
-*
-:
--
-awsy
-/
-macosx_config
-.
-py
-linux
-.
-*
-:
--
-awsy
-/
-linux_config
-.
-py
 extra
 -
 options
@@ -280,9 +217,6 @@ for
 Stylo
 sequential
 "
-suite
-:
-awsy
 treeherder
 -
 symbol
@@ -293,27 +227,6 @@ SYss
 (
 sy
 )
-max
--
-run
--
-time
-:
-7200
-instance
--
-size
-:
-xlarge
-allow
--
-software
--
-gl
--
-layers
-:
-false
 run
 -
 on
@@ -350,35 +263,6 @@ built
 projects
 mozharness
 :
-script
-:
-awsy_script
-.
-py
-config
-:
-#
-Only
-run
-on
-Linux64
-.
-by
--
-test
--
-platform
-:
-linux
-.
-*
-:
--
-awsy
-/
-linux_config
-.
-py
 extra
 -
 options
