Bug 1407487 - P4: Disable backtrace in error-log to work around bug 1409276.  r=kamidphish
MozReview-Commit-ID: KHGTVi6QePx

UltraBlame original commit: 2b88b91f35f9c47a9c3cf1838c2d9961fe5b9a8a

--- a/media/audioipc/audioipc/Cargo.toml
+++ b/media/audioipc/audioipc/Cargo.toml
@@ -88,17 +88,6 @@ bytes
 .
 4
 "
-error
--
-chain
-=
-"
-0
-.
-10
-.
-0
-"
 libc
 =
 "
@@ -163,3 +152,24 @@ serde_derive
 .
 *
 "
+[
+dependencies
+.
+error
+-
+chain
+]
+version
+=
+"
+0
+.
+10
+.
+0
+"
+default
+-
+features
+=
+false
