--- a/media/audioipc/server/Cargo.toml
+++ b/media/audioipc/server/Cargo.toml
@@ -106,17 +106,6 @@ bytes
 .
 4
 "
-error
--
-chain
-=
-"
-0
-.
-10
-.
-0
-"
 lazycell
 =
 "
@@ -171,3 +160,24 @@ slab
 .
 0
 "
+[
+dependencies
+.
+error
+-
+chain
+]
+version
+=
+"
+0
+.
+10
+.
+0
+"
+default
+-
+features
+=
+false
