Bug 1408341 - Implement assignedSlot on Element and Text. r=smaug
UltraBlame original commit: c5ee99a2c4c83edf6d19294618102b763b96c4a5

--- a/testing/web-platform/meta/dom/interfaces.html.ini
+++ b/testing/web-platform/meta/dom/interfaces.html.ini
@@ -6,6 +6,17 @@ html
 type
 :
 testharness
+prefs
+:
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
 [
 Document
 interface
@@ -137,16 +148,6 @@ FAIL
 Element
 interface
 :
-attribute
-assignedSlot
-]
-expected
-:
-FAIL
-[
-Element
-interface
-:
 element
 must
 inherit
@@ -227,16 +228,6 @@ type
 (
 48
 )
-]
-expected
-:
-FAIL
-[
-Text
-interface
-:
-attribute
-assignedSlot
 ]
 expected
 :
@@ -761,51 +752,6 @@ attachShadow
 (
 ShadowRootInit
 )
-"
-with
-the
-proper
-type
-]
-expected
-:
-FAIL
-[
-Element
-interface
-:
-element
-must
-inherit
-property
-"
-assignedSlot
-"
-with
-the
-proper
-type
-]
-expected
-:
-FAIL
-[
-Text
-interface
-:
-document
-.
-createTextNode
-(
-"
-abc
-"
-)
-must
-inherit
-property
-"
-assignedSlot
 "
 with
 the
