--- a/testing/web-platform/meta/payment-request/interfaces.https.html.ini
+++ b/testing/web-platform/meta/payment-request/interfaces.https.html.ini
@@ -8,6 +8,17 @@ html
 type
 :
 testharness
+prefs
+:
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
 [
 PaymentRequest
 interface
@@ -2745,26 +2756,6 @@ attachShadow
 (
 ShadowRootInit
 )
-]
-expected
-:
-FAIL
-[
-Element
-interface
-:
-attribute
-assignedSlot
-]
-expected
-:
-FAIL
-[
-Text
-interface
-:
-attribute
-assignedSlot
 ]
 expected
 :
