--- a/testing/web-platform/meta/shadow-dom/Slotable-interface.html.ini
+++ b/testing/web-platform/meta/shadow-dom/Slotable-interface.html.ini
@@ -8,21 +8,17 @@ html
 type
 :
 testharness
-[
-assignedSlot
-attribute
-must
-be
-defined
-on
-Element
-and
-Text
-interfaces
-]
-expected
+prefs
 :
-FAIL
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
 [
 assignedSlot
 must
