--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -2813,6 +2813,36 @@ string
 name
 =
 "
+pref_custom_tabs
+"
+>
+&
+pref_custom_tabs2
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pref_custom_tabs_summary
+"
+>
+&
+pref_custom_tabs_summary4
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
 custom_tabs_menu_item_open_in
 "
 >
