--- a/testing/web-platform/meta/shadow-dom/historical.html.ini
+++ b/testing/web-platform/meta/shadow-dom/historical.html.ini
@@ -3,6 +3,25 @@ historical
 .
 html
 ]
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1410242
 [
 element
 .
