Bug 1410248 - Disable speech-api test for intermittent crashes, a=testonly
MozReview-Commit-ID: 9tQO0tp8SE4

UltraBlame original commit: 83dfc2b82faaa6891637ca6af18e7346a019c9a6

--- a/testing/web-platform/meta/speech-api/SpeechSynthesis-speak-twice.html.ini
+++ b/testing/web-platform/meta/speech-api/SpeechSynthesis-speak-twice.html.ini
@@ -7,9 +7,29 @@ twice
 .
 html
 ]
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1410248
 expected
 :
 if
+not
 debug
 and
 not
@@ -22,7 +42,7 @@ os
 =
 =
 "
-mac
+linux
 "
 )
 and
@@ -31,13 +51,10 @@ version
 =
 =
 "
-OS
-X
-10
+Ubuntu
+16
 .
-10
-.
-5
+04
 "
 )
 and
@@ -55,99 +72,6 @@ bits
 =
 =
 64
-)
-:
-CRASH
-if
-not
-debug
-and
-not
-stylo
-and
-e10s
-and
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-version
-=
-=
-"
-Ubuntu
-16
-.
-04
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-(
-bits
-=
-=
-32
-)
-:
-CRASH
-if
-not
-debug
-and
-stylo
-and
-e10s
-and
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-version
-=
-=
-"
-Ubuntu
-16
-.
-04
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-(
-bits
-=
-=
-32
 )
 :
 CRASH
