--- a/testing/web-platform/meta/requestidlecallback/callback-timeout-with-raf.html.ini
+++ b/testing/web-platform/meta/requestidlecallback/callback-timeout-with-raf.html.ini
@@ -9,25 +9,6 @@ raf
 .
 html
 ]
-disabled
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1410247
 [
 requestIdleCallback
 not
@@ -42,8 +23,56 @@ busy
 expected
 :
 if
+not
 debug
 and
+not
+stylo
+and
+e10s
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+version
+=
+=
+"
+Ubuntu
+16
+.
+04
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+(
+bits
+=
+=
+32
+)
+:
+FAIL
+if
+debug
+and
+not
 stylo
 and
 e10s
