--- a/testing/web-platform/meta/speech-api/SpeechSynthesis-speak-twice.html.ini
+++ b/testing/web-platform/meta/speech-api/SpeechSynthesis-speak-twice.html.ini
@@ -7,27 +7,57 @@ twice
 .
 html
 ]
-disabled
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1410248
 expected
 :
+if
+debug
+and
+not
+stylo
+and
+e10s
+and
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+(
+version
+=
+=
+"
+OS
+X
+10
+.
+10
+.
+5
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
+bits
+=
+=
+64
+)
+:
+CRASH
 if
 not
 debug
@@ -63,7 +93,7 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
 and
@@ -71,7 +101,53 @@ and
 bits
 =
 =
-64
+32
+)
+:
+CRASH
+if
+not
+debug
+and
+stylo
+and
+e10s
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+version
+=
+=
+"
+Ubuntu
+16
+.
+04
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+(
+bits
+=
+=
+32
 )
 :
 CRASH
