servo: Merge #18944 - Stop relying on linking details of std’s default allocator (from servo:jemallocator2); r=nox
We’ve been bitten before by symbol names changing: https://github.com/servo/heapsize/pull/46, and upstream is planning to stop using jemalloc by default: https://github.com/rust-lang/rust/issues/33082#issuecomment-309781465

So use the (relatively) new `#[global_allocator]` attribute to explicitly select the system allocator on Windows and jemalloc (now in an external crate) on other platforms. This choice matches current defaults.

Source-Repo: https://github.com/servo/servo
Source-Revision: 07e9794306d597afe5d90d192fd32a99572c3cc3

UltraBlame original commit: 921526150768f9a2e9ba1586a350583f9ad025c9

--- a/servo/components/script/Cargo.toml
+++ b/servo/components/script/Cargo.toml
@@ -74,6 +74,11 @@ debugmozjs
 unstable
 =
 [
+"
+servo_allocator
+/
+unstable
+"
 ]
 [
 build
@@ -669,6 +674,18 @@ serde
 .
 0
 "
+servo_allocator
+=
+{
+path
+=
+"
+.
+.
+/
+allocator
+"
+}
 servo_arc
 =
 {
