--- a/servo/tests/unit/profile/Cargo.toml
+++ b/servo/tests/unit/profile/Cargo.toml
@@ -53,6 +53,18 @@ doctest
 =
 false
 [
+features
+]
+unstable
+=
+[
+"
+servo_allocator
+/
+unstable
+"
+]
+[
 dependencies
 ]
 ipc
@@ -102,5 +114,43 @@ path
 components
 /
 profile_traits
+"
+}
+#
+Work
+around
+https
+:
+/
+/
+github
+.
+com
+/
+alexcrichton
+/
+jemallocator
+/
+issues
+/
+19
+servo_allocator
+=
+{
+path
+=
+"
+.
+.
+/
+.
+.
+/
+.
+.
+/
+components
+/
+allocator
 "
 }
