--- a/servo/components/profile/Cargo.toml
+++ b/servo/components/profile/Cargo.toml
@@ -58,6 +58,11 @@ features
 unstable
 =
 [
+"
+jemalloc
+-
+sys
+"
 ]
 [
 dependencies
@@ -227,3 +232,21 @@ libc
 .
 2
 "
+jemalloc
+-
+sys
+=
+{
+version
+=
+"
+0
+.
+1
+.
+3
+"
+optional
+=
+true
+}
