Bug 1408220 - Enable mochitest-plain-headlesss on windows. r=jmaher
UltraBlame original commit: a181d53f7e1574af9e19dbc8d50ee1829e80cf12

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -1236,6 +1236,10 @@ sets
 windows
 -
 tests
+-
+mochitest
+-
+headless
 windows10
 -
 64
@@ -1277,6 +1281,10 @@ disabled
 windows
 -
 tests
+-
+mochitest
+-
+headless
 windows10
 -
 64
