Bug 1403349 - Split webNavigation onCreatedNavigationTarget tests to prevent timeouts on linux32 debug. r=aswan
MozReview-Commit-ID: 50JLocTVvfu

UltraBlame original commit: e802283bbf21d14d431901dd286681cd1933bb97

--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -14,6 +14,9 @@ js
 head_sessions
 .
 js
+head_webNavigation
+.
+js
 profilerSymbols
 .
 sjs
@@ -967,6 +970,16 @@ js
 ]
 [
 browser_ext_webNavigation_onCreatedNavigationTarget_contextmenu
+.
+js
+]
+[
+browser_ext_webNavigation_onCreatedNavigationTarget_named_window
+.
+js
+]
+[
+browser_ext_webNavigation_onCreatedNavigationTarget_subframe_window_open
 .
 js
 ]
