Bug 1410006 - ESLint should automatically ignore all crashtest directories; and clean up .eslintignore a bit. r=mossop
MozReview-Commit-ID: 93aNFQQcgrV

UltraBlame original commit: 39444cb663f7cdd15ef5fc2792d8a75981fd77d7

--- a/.eslintignore
+++ b/.eslintignore
@@ -15,6 +15,28 @@ node_modules
 .
 *
 #
+Always
+ignore
+crashtests
+-
+specially
+crafted
+files
+that
+originally
+caused
+a
+#
+crash
+.
+*
+*
+/
+crashtests
+/
+*
+*
+#
 Exclude
 expected
 objdirs
@@ -62,10 +84,6 @@ docshell
 *
 *
 editor
-/
-*
-*
-embedding
 /
 *
 *
@@ -123,15 +141,7 @@ parser
 /
 *
 *
-python
-/
-*
-*
 rdf
-/
-*
-*
-servo
 /
 *
 *
@@ -144,10 +154,6 @@ packaging
 *
 *
 uriloader
-/
-*
-*
-view
 /
 *
 *
@@ -191,6 +197,10 @@ db
 /
 *
 *
+embedding
+/
+*
+*
 gradle
 /
 *
@@ -226,6 +236,28 @@ startupcache
 *
 *
 xpfe
+/
+*
+*
+#
+These
+directories
+only
+contain
+crashtests
+but
+we
+still
+skip
+the
+whole
+#
+directory
+to
+aid
+performance
+.
+view
 /
 *
 *
@@ -2299,6 +2331,19 @@ Snippets
 .
 js
 #
+Only
+contains
+non
+-
+standard
+test
+files
+.
+python
+/
+*
+*
+#
 security
 /
 exclusions
@@ -2357,6 +2402,15 @@ services
 sync
 .
 js
+#
+Servo
+is
+imported
+.
+servo
+/
+*
+*
 #
 Remote
 protocol
