--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -3233,6 +3233,21 @@ string
 name
 =
 "
+pref_sync_default_title
+"
+>
+&
+pref_sync_default_title
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
 pref_sync
 "
 >
