Bug 1406448 - Skip test_conformance__glsl__misc__shader-uniform-packing-restrictions.html on Win7 debug for frequent failures. r=RyanVM
UltraBlame original commit: f0832773e45106bccf83d35fec16066670e5823a

--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -7814,6 +7814,13 @@ restrictions
 .
 html
 ]
+#
+Frequent
+timeout
+on
+win7
+debug
+.
 skip
 -
 if
@@ -7825,6 +7832,29 @@ os
 '
 android
 '
+)
+|
+|
+(
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+6
+.
+1
+'
+&
+&
+debug
 )
 [
 generated
