Bug 1398038 - Add tests for extended composite syntax; r=hiro
MozReview-Commit-ID: 1tbpTLqPfn1

UltraBlame original commit: 613864106ebc951c6b583e0c7cbf936312cd9712

--- a/testing/web-platform/meta/web-animations/interfaces/Animatable/animate.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/Animatable/animate.html.ini
@@ -333,6 +333,74 @@ Element
 animate
 (
 )
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+short
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+long
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
 does
 not
 accept
