--- a/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/constructor.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/constructor.html.ini
@@ -417,6 +417,139 @@ expected
 :
 FAIL
 [
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+roundtrips
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+short
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+short
+roundtrips
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+long
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+long
+roundtrips
+]
+expected
+:
+FAIL
+[
 KeyframeEffectReadOnly
 constructor
 throws
