--- a/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/setKeyframes.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/setKeyframes.html.ini
@@ -315,6 +315,71 @@ expected
 :
 FAIL
 [
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+]
+expected
+:
+FAIL
+[
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+short
+]
+expected
+:
+FAIL
+[
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+a
+composite
+array
+that
+is
+too
+long
+]
+expected
+:
+FAIL
+[
 KeyframeEffect
 constructor
 throws
